
* LUCENE-10352: Add missing service provider entries: KoreanNumberFilterFactory,
  DaitchMokotoffSoundexFilterFactory (Uwe Schindler, Robert Muir)

* LUCENE-10352: Fixed ctor argument checks: JapaneseKatakanaStemFilter,
  DoubleMetaphoneFilter (Uwe Schindler, Robert Muir)

* LLUCENE-10353: Add random null injection to TestRandomChains. (Robert Muir,
  Uwe Schindler)

Other
---------------------

* LUCENE-10273: Deprecate SpanishMinimalStemFilter in favor of SpanishPluralStemFilter. (Robert Muir)

* LUCENE-10284: Upgrade morfologik-stemming to 2.1.8. (Dawid Weiss)

* LUCENE-10310: TestXYDocValuesQueries#doRandomDistanceTest does not produce random circles with radius
  with '0' value any longer.

* LUCENE-10352: Removed duplicate instances of StringMockResourceLoader and migrated class to
  test-framework.  (Uwe Schindler, Robert Muir)

* LUCENE-10352: Convert TestAllAnalyzersHaveFactories and TestRandomChains to a global integration test
  and discover classes to check from module system. The test now checks all analyzer modules,
  so it may discover new bugs outside of analysis:common module.  (Uwe Schindler, Robert Muir)

======================= Lucene 9.0.0 =======================

New Features
---------------------

* LUCENE-9322, LUCENE-9855: Vector-valued fields, Lucene90 Codec (Mike Sokolov, Julie Tibshirani, Tomoko Uchida)

* LUCENE-9004, LUCENE-10040: Approximate nearest vector search via NSW graphs (Mike Sokolov, Tomoko Uchida et al.)

* LUCENE-9659: SpanPayloadCheckQuery now supports inequalities. (Kevin Watters, Gus Heck)

* LUCENE-9589: Swedish Minimal Stemmer (janhoy)

* LUCENE-9313: Add SerbianAnalyzer based on the snowball stemmer. (Dragan Ivanovic)

* LUCENE-10095: Add NepaliAnalyzer based on the snowball stemmer. (Robert Muir)

* LUCENE-10096: Add TamilAnalyzer based on the snowball stemmer. (Robert Muir)

* LUCENE-10102: Add JapaneseCompletionFilter for Input Method-aware auto-completion (Tomoko Uchida, Robert Muir, Jun Ohtani)
