@@ -160,67 +160,6 @@ public abstract class BufferedIndexInput extends IndexInput implements RandomAcc
   }
 
   @Override
-  public final int readVInt() throws IOException {
-    if (5 <= buffer.remaining()) {
-      byte b = buffer.get();
-      if (b >= 0) return b;
-      int i = b & 0x7F;
-      b = buffer.get();
-      i |= (b & 0x7F) << 7;
-      if (b >= 0) return i;
-      b = buffer.get();
-      i |= (b & 0x7F) << 14;
-      if (b >= 0) return i;
-      b = buffer.get();
-      i |= (b & 0x7F) << 21;
-      if (b >= 0) return i;
-      b = buffer.get();
-      // Warning: the next ands use 0x0F / 0xF0 - beware copy/paste errors:
-      i |= (b & 0x0F) << 28;
-      if ((b & 0xF0) == 0) return i;
-      throw new IOException("Invalid vInt detected (too many bits)");
-    } else {
-      return super.readVInt();
-    }
-  }
-
-  @Override
-  public final long readVLong() throws IOException {
-    if (9 <= buffer.remaining()) {
-      byte b = buffer.get();
-      if (b >= 0) return b;
-      long i = b & 0x7FL;
-      b = buffer.get();
-      i |= (b & 0x7FL) << 7;
-      if (b >= 0) return i;
-      b = buffer.get();
-      i |= (b & 0x7FL) << 14;
-      if (b >= 0) return i;
-      b = buffer.get();
-      i |= (b & 0x7FL) << 21;
-      if (b >= 0) return i;
-      b = buffer.get();
-      i |= (b & 0x7FL) << 28;
-      if (b >= 0) return i;
-      b = buffer.get();
-      i |= (b & 0x7FL) << 35;
-      if (b >= 0) return i;
-      b = buffer.get();
-      i |= (b & 0x7FL) << 42;
-      if (b >= 0) return i;
-      b = buffer.get();
-      i |= (b & 0x7FL) << 49;
-      if (b >= 0) return i;
-      b = buffer.get();
-      i |= (b & 0x7FL) << 56;
-      if (b >= 0) return i;
-      throw new IOException("Invalid vLong detected (negative values disallowed)");
-    } else {
-      return super.readVLong();
-    }
-  }
-
-  @Override
   public final byte readByte(long pos) throws IOException {
     long index = pos - bufferStart;
     if (index < 0 || index >= buffer.limit()) {
